# ask

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  setup.py
.amazonq/rules/: code-instructions.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-image.yml  pytest.yml  ruff.yml
ask/: __init__.py  main_cli.py  main_mcp.py  main_run.py  model.py
ask/core/: agent.py  agent_cache.py  agent_context.py  agent_history.py  agent_instrumentation.py  cache.py  chat.py  config.py  context.py  history.py  instrumentation.py  mcp_client.py  memory.py  memory_history.py  model.py  rest_api.py  tchat.py  tools.py
ask/eval/: instrumentation.py
docs/: code-instructions.md
eval/: __init__.py  agent.py  data.py  eval-lmstudio.sh  eval-ollama.sh  eval.py  eval.yaml  eval_executor.py  experiment.py  experiment_data.py  instrumentation.py  setsid.c
eval/experiment/: _cleanup.py  data.py  list_of_tools.py  list_of_tools_max.py  main.py  one_shoot_agent.py  review.py  simple.py  simple_math.py
examples/: agent-generator  agent_generator  architect  ask  ask-brave  ask-browser  ask-duckduckgo  ask-searxng  blog-post  browser  code-review  code_review  critic  critique  deep_research  eng  image  memory  mentor  pizza  pizza-score  pizza_score  prompt  prompt-agent  prompt-gpt5  research  rewrite-resume  search  search-duckduckgo  test  writer
examples/blog_post/: README.md  blog_post.py  critic.yaml  llm.py  llm.yaml  main.py  outline.py  outline.yaml  post.yaml  research.py  research.yaml  score.py  score.yaml  writer.py
examples/progs/: architect  crew  llm.yaml  programmer  reviewer  tester
examples/research/: assess.py  common.py  fetch.py  finalize.py  llm.py  main.py  query_gen.py  report.py  search.py
src/: __init__.py  agent.py  api_main.py  ask.py  chat.py  cli.py  cli_main.py  config.py  main_cli.py  main_mcp.py  mcp_client.py  mcp_main.py  model.py
src/ask/: __init__.py  chat.py  config.py
src/core/: agent.py  agent_history.py  api.py  chat.py  config.py  mcp_client.py  model.py  rest_api.py  tchat.py  web.py  web_ui.py
tests/: test_agent.py  test_agent_config.py  test_api_main.py  test_api_main_simple.py  test_config.py  test_config_api.py  test_context.py  test_context_ask.py  test_eval_instrumentation.py  test_llm_config.py  test_mcp_client.py  test_memory_history.py  test_tools.py
