[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask"
version = "0.12.0"
description = "ASK CLI/MCP"
authors = [
    { name = "varlabz", email = "varlabz@umdoze.com" }
]
dependencies = [
    "pydantic-ai",
    "mcp[cli]",
    "pyyaml",
    "openai<=1.99.1", # temp
    "griffe>=1.7.3",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prompt-toolkit>=3.0.0",
    "nicegui>=2.24.0",
    "httpx>=0.28.1",
    "pywebview>=6.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
ask-cli = "main_cli:main"
ask-mcp = "main_mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}
